--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,13 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 html {
-  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
-  @apply text-sm font-sans;
+  @apply text-sm;
 }
 
 *,
@@ -32,10 +33,4 @@ html {
   @apply absolute m-0  top-2/4;
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
-}
-
-.filter-drop {
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  background: inherit;
 }
